# ants

./: .gitignore  CMakeLists.txt  README.md  cmd.sh  main.cpp
.github/workflows/: cmake.yaml
include/ants/: App.hpp  ant.hpp  anthill.hpp  app.hpp  colony.hpp  food.hpp  heatmap.h  heatmap.hpp  marker.hpp  world.hpp
include/gui/: theme.hpp
include/vector2/: vector2.h
src/: App.cpp  ant.cpp  app.cpp
test/: CMakeLists.txt  doctest.h  dummy_test.cpp  test_dummy.cpp  test_heatmap.cpp  test_spawning.cpp  test_theme.cpp  test_vector2.cpp
